--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <div class="row justify-content-center">
-    <div class="col">
-      <h1>Middleman Boilerplate</h1>
-      <p>Bootstrap and Font Awesome already installed.</p>
+    <div class="col-12 header-container">
+      <h1>Renato Delboni</h1>
+      <p>Front-End Developer | Software Engineer</p>
     </div>
   </div>
 </div>
