--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,7 @@
     <div class="col-12 header-container">
       <h1>Renato Delboni</h1>
       <p>Front-End Developer | Software Engineer</p>
+      <%= image_tag 'renato_profile.png', class:'img-circle'%>
     </div>
   </div>
 </div>
