--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,6 +4,7 @@
       <h1>Renato Delboni</h1>
       <p>Front-End Developer | Software Engineer</p>
       <%= image_tag 'renato_profile.png', class:'img-circle'%>
+      <%= partial 'partials/tags' %>
     </div>
   </div>
 </div>
